apps/monitoring/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-tls
  namespace: monitoring
spec:
  parentRefs:
  - name: gateway-internal
    namespace: gateway-apis
    sectionName: http
  hostnames:
  - grafana.int.midugh.fr
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
  - name: gateway-internal
    namespace: gateway-apis
    sectionName: https
  hostnames:
  - grafana.int.midugh.fr
  rules:
  - matches:
    - path:
        value: /
        type: PathPrefix
    backendRefs:
    - name: prometheus-grafana
      port: 80
